--- a/app.yaml
+++ b/app.yaml
@@ -1,2 +1,2 @@
 runtime: python39
-entrypoint: app.main:app --host 0.0.0.0 --port 8000 --reload
+entrypoint: gunicorn -w 4 -k uvicorn.workers.UvicornWorker app.main:app
