--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ psycopg2-binary==2.9.4
 py==1.10.0
 pycparser==2.20
 pydantic==1.10.2
-PyJWT==2.0.1
+# PyJWT==2.0.1
 pyparsing==2.4.7
 pytest==6.2.2
 python-dateutil==2.8.1
