--- a/env.example
+++ b/env.example
@@ -1,3 +1,8 @@
-PROJECT_NAME=FASTAPI BASE
+ENVIRONMENT=dev
+DB_DOMAIN=localhost
+DB_NAME=emodb
+DB_USER=huy
+DB_PASSWORD=123456
 SECRET_KEY=123456
-SQL_DATABASE_URL=postgresql+psycopg2://postgres:postgres@db:5432/postgres
+REDIS_HOST=localhost
+REDIS_PORT=8004
